# PowerGridCompoundRisk

./: .env  .gitignore  LICENSE  Makefile  README.md  model.ipynb  pyproject.toml
config/: parameters.py  paths.py
data/: processor.py
experiments/: single_hazard.py
models/: HOTGNN.py  HoSC.py  arin.py  dynamic.py  gnn.py
notebooks/: HotNet.ipynb  data_preparation.ipynb  disaster_simulation.ipynb  info.ipynb  model.ipynb  test.py  testmodel.ipynb  可视化.ipynb  灾害模拟.ipynb  特征处理.ipynb
reports/: texas_electric_network.md  texas_gas_network.md  texas_merged_network.md
src/: config.py  data_processing.py  features.py  main.py
src/analyze/: european_graph_info.py  graph_info.py  texas_graph_info.py
src/model/: HoSC.py  HotNet.py
src/modeling/: composite_hazard.py  single_hazard.py
src/models/: HoSC.py  HotNet.py  dynamicHotNet.py
src/process/: european_features copy.py  feature_extraction.py  texas_features.py  texas_networkBuild.py
src/utils/: metrics.py
utils/: vis_utils.py
