[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "src"
version = "0.1.0"
description = "A short description of the project."
authors = [{ name = "Wenjie Xu", email = "wenjie.xu.cn@outlook.com" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "numpy>2.0",
  "scipy",
  "igraph",
  "seaborn",
  "pandas",
  "notebook",
  "plotly",
  "pycairo",
  "torch",
  "torch_geometric",
  "tensorflow",
  "scikit-learn",
  "numba",
  "networkx",
  "python-dotenv",
  "tqdm",
  "loguru",
  "typer",
  "tabulate",
  "torchinfo"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["src"]
include = ["pyproject.toml", "src/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"] # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-sort-within-sections = true